--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ git:
   depth: 3
 
 before_script:
-  - npm install markdownlint-cli
+  - npm install markdownlint-cli --ignore node_modules
 
 script:
-  - markdownlint $PWD
+  - markdownlint $PWD 
