Test Travis CI integration (#1)
Travis CI integration with master and develop branches

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,4 @@ before_script:
   - npm install markdownlint-cli
 
 script:
-  - markdownlint $PWD
-
-branches:
-  only:
-    - master
+  - markdownlint $PWD --ignore node_modules
